Add start content and rework level change